# ancient-empires-reverse-engineered

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-build.txt  requirements.txt  run_editor.py  run_game.py
ae_editor/: __init__.py  __main__.py  actor_dsl.py  actor_scripts.py  audio.py  cli.py  compression.py  constants.py  conveyors.py  coordinates.py  dat_archive.py  exporters.py  graphics.py  gui.py  level_format.py  object_mapping.py  overlay.py  project.py  renderer.py  room_payload.py  simulation.py  tile_mapping.py  type47.py
ae_game/: __init__.py
ancient_empires/: __init__.py  constants.py  project.py
docs/: actor_dsl.md  actor_script_space.md  ae000_054_opl_header.txt  ai_context.md  audio_054_spectrogram_diagnosis.md  audio_054_spectrum_tuning.md  audio_asm_findings.md  audio_capture_calibration.md  audio_engine.md  audio_fm_instrument_findings.md  audio_music_054_fix.md  audio_opl_instrument_table.csv  audio_opl_instrument_table.md  audio_opl_preview_work.md  audio_opl_vgm_trace_work.md  audio_sfx_findings.md  audio_sfx_verify2.md  audio_sfx_verify3.md  audio_sfx_verify4.md  editor_overhaul_notes.md  engine_architecture.md  file_format_summary.md  gameplay_reverse_engineering.md  handoff.md  level_format.md  level_format_v16.md  level_format_v17.md  level_format_v18.md  level_format_v20.md  level_format_v21.md  level_format_v22.md  level_format_v23.md  level_format_v24.md  level_format_v25.md  level_format_v26.md  level_format_v27.md  level_format_v28.md  level_format_v29.md  level_format_v30.md  level_format_v31.md  (+23 more)
nuked_opl3/: setup.py  (+1 more)
(+107 files in other folders)
