[project]
name = "ancient-empires-level-editor"
version = "0.1.0"
description = "Research level viewer/editor for Super Solvers: Challenge of the Ancient Empires"
requires-python = ">=3.10"
dependencies = ["Pillow>=10.0", "numpy>=1.24", "sounddevice>=0.5", "ymfm-py>=0.2"]

[project.scripts]
ae-level-editor = "ae_editor.app.cli:main"
